/*
boilerplate text in generated file header
*/


// This file was autogenerated by go-to-protobuf. Do not edit it manually!

syntax = "proto2";

package github.com.phosae.x_kubernetes.api.hello.zeng.dev.v2;

import "k8s.io/apimachinery/pkg/apis/meta/v1/generated.proto";
import "k8s.io/apimachinery/pkg/runtime/generated.proto";
import "k8s.io/apimachinery/pkg/runtime/schema/generated.proto";

// Package-wide variables from generator "generated".
option go_package = "github.com/phosae/x-kubernetes/api/hello.zeng.dev/v2";

// Config is the config subresource of Foo
message Config {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  optional ConfigSpec spec = 2;
}

message ConfigSpec {
  // Msg says hello world!
  optional string msg = 1;

  // Msg1 provides some verbose information
  // +optional
  optional string msg1 = 2;
}

message Foo {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  optional FooSpec spec = 2;

  optional FooStatus status = 3;
}

message FooCondition {
  optional string type = 1;

  optional string status = 2;
}

message FooConfig {
  // Msg says hello world!
  optional string msg = 1;

  // Msg1 provides some verbose information
  // +optional
  optional string msg1 = 2;
}

message FooList {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ListMeta metadata = 1;

  repeated Foo items = 2;
}

message FooSpec {
  // Container image that the container is running to do our foo work
  optional string image = 1;

  // Config is the configuration used by foo container
  optional FooConfig config = 2;
}

message FooStatus {
  // The phase of a Foo is a simple, high-level summary of where the Foo is in its lifecycle
  // +optional
  optional string phase = 1;

  // Represents the latest available observations of a foo's current state
  // +optional
  // +patchMergeKey=type
  // +patchStrategy=merge
  repeated FooCondition conditions = 2;
}

